added batch by name for emojis
